# QuickVGL

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  config.h  cross.cmake  readme.md  structure.md  x86.cmake
3rd/SDL-2.26.5/: CMakeLists.txt
3rd/cairo-1.16.0/: Makefile.in  aclocal.m4  configure
3rd/cairo-1.16.0/boilerplate/: Makefile.in
3rd/cairo-1.16.0/doc/: Makefile.in
3rd/cairo-1.16.0/doc/public/: Makefile.in
3rd/cairo-1.16.0/perf/: Makefile.in
3rd/cairo-1.16.0/perf/micro/: Makefile.in
3rd/cairo-1.16.0/src/: Makefile.in
3rd/cairo-1.16.0/test/: Makefile.in
3rd/cairo-1.16.0/test/pdiff/: Makefile.in
3rd/cairo-1.16.0/util/: Makefile.in
3rd/cairo-1.16.0/util/cairo-fdr/: Makefile.in
3rd/cairo-1.16.0/util/cairo-gobject/: Makefile.in
3rd/cairo-1.16.0/util/cairo-missing/: Makefile.in
3rd/cairo-1.16.0/util/cairo-script/: Makefile.in
3rd/cairo-1.16.0/util/cairo-script/examples/: Makefile.in
3rd/cairo-1.16.0/util/cairo-sphinx/: Makefile.in
3rd/cairo-1.16.0/util/cairo-trace/: Makefile.in
3rd/freetype/: CMakeLists.txt
3rd/freetype/builds/unix/: ftsystem.c
3rd/freetype/builds/vms/: ftsystem.c
3rd/tslib-1.22/: CMakeLists.txt
3rd/tslib-1.22/src/: ts_version.c
configs/: config.h  lv_conf.h  lv_drv_conf.h
demo/: CMakeLists.txt  main.cpp  main.h  main.hpp
demo/assets/: testimg.c  testimg.h
lv_c_module/: CMakeLists.txt
lv_c_module/curveDemo/: CMakeLists.txt  demo.c
lv_c_module/fastCache/: CMakeLists.txt  lv_fastCache.c  lv_fastCache.h
lv_c_module/fastCache/3rd/lib/: libpng16.so.16.39.0  libz.so.1.2.12
lv_c_module/testHal/: testHal.c  testHal.h
lv_c_module/touchSlider/: CMakeLists.txt  bigicon.c  demo.c  lv_touchSlider.c  lv_touchSlider.h
lvgl-8.3.6/: lv_conf.h
lvgl-8.3.6/examples/anim/: lv_example_anim_2.c
lvgl-8.3.6/src/draw/: lv_draw_img.c
lvgl-8.3.6/src/draw/sw/: lv_draw_sw.c  lv_draw_sw_rect.c
lvgl-8.3.6/src/extra/widgets/chart/: lv_chart.c
output/lib/: libQuickVGL.dylib
src/: CMakeLists.txt  QuickVGL.cpp  QuickVGL.hpp  qvgl.cpp  qvgl.h  qvgl.hpp
src/Graphics/: FrameBuffer.cpp  FrameBuffer.hpp  QGraphics.hpp
src/UIElement/: QElement.cpp  QElement.hpp  QImage.cpp  QImage.hpp  QLabel.cpp  QLabel.hpp  QUIElement.hpp  QView.cpp  QView.h  QView.hpp
src/UIKit/: QApplication.cpp  QApplication.hpp  QNav.cpp  QNav.hpp  QPage.cpp  QPage.hpp  QTab.cpp  QTab.hpp  QUIKit.hpp
src/UIManager/: QDisplay.cpp  QDisplay.hpp  QEvent.cpp  QEvent.hpp  QFontManager.cpp  QFontManager.hpp  QHashView.cpp  QHashView.hpp  QIDManager.cpp  QIDManager.hpp  QImageManager.cpp  QImageManager.hpp  QImageResource.cpp  QImageResource.hpp  QInput.cpp  QInput.hpp  QTimer.cpp  QTimer.hpp  QUILauncher.cpp  QUILauncher.hpp  QUIManager.cpp  QUIManager.hpp
src/UIWidget/: QUIWidget.hpp  qTouchSlider.cpp  qTouchSlider.hpp
src/Utils/: PtrMaker.cpp  PtrMaker.hpp  QFloat.cpp  QFloat.h  QFont.cpp  QFont.hpp  QInt.cpp  QInt.hpp  QString.cpp  QString.hpp  QTypes.hpp  QUtils.hpp  QValue.hpp
